# machine_setup

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  TODOS.md  build.rs  example_config.json  example_config.yaml  machine_setup.yaml  test.yml
.claude/: settings.local.json
.github/workflows/: build.yml  publish.yml  publish_cargo.yml  run_tests.yml  test.yml  update_tap.yml
completions/: _machine_setup  _machine_setup.ps1  machine_setup.bash  machine_setup.elv  machine_setup.fish
install/: install.ps1  install.sh
release/: push_tag.sh
src/: cli.rs  command.rs  error.rs  lib.rs  main.rs  task.rs  task_runner.rs  terminal.rs
src/commands/: clone.rs  copy.rs  machine_setup.rs  mod.rs  run.rs  shell.rs  symlink.rs
src/config/: base_config.rs  config.rs  config_value.rs  history.rs  json_config.rs  mod.rs  os.rs  types.rs  validate.rs  validator.rs  yaml_config.rs
src/config/validation_rules/: is_array.rs  is_bool.rs  is_string.rs  mod.rs  one_of.rs  required.rs
src/engine/: context.rs  event.rs  mod.rs  runner.rs
src/engine/commands/: clone.rs  copy.rs  mod.rs  run.rs  setup.rs  symlink.rs
src/terminal/: cli.rs  command.rs  exit_codes.rs  mod.rs
src/tui/: app.rs  mod.rs  plain.rs
src/tui/widgets/: header.rs  help_bar.rs  log_view.rs  mod.rs  task_list.rs
src/utils/: directory.rs  mod.rs  path.rs  process.rs  shell.rs  sudo.rs  temp_storage.rs  terminal.rs  threads.rs
tests/: integration.rs
