[package]
name = "machine_setup"
version = "1.2.4"
edition = "2021"
authors = ["Timo Prüße <chroma91@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool for configuring and setting up your machine."
readme = "README.md"
homepage = "https://github.com/Chroma91/machine-setup"
repository = "https://github.com/Chroma91/machine-setup"
keywords = ["cli", "machine", "setup", "configure"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true

[dev-dependencies]
tempfile = "3.3"
dirs = "4"

[build-dependencies]
clap = { version = "3", features = ["derive", "wrap_help"] }
clap_complete = "4"
tracing = "0.1"

[dependencies]
once_cell = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
indicatif = "0.17"
num_cpus = "1"
rand = "0.8"
ergo_fs = "0.2"
yaml-rust = "0.4"
serde_json = "1.0"
symlink = "0.1"
git_commands = "0.2"
clap = { version = "3", features = ["derive", "wrap_help"] }
ansi_term = "0.12"
dialoguer = "0.10"
