[package]
name = "machine_setup"
version = "2.0.0"
edition = "2021"
description = "A CLI tool with TUI for automating machine configuration and setup tasks"
license = "MIT OR Apache-2.0"
authors = ["Timo Pruesse"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Config parsing
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
walkdir = "2"
dialoguer = "0.11"
async-trait = "0.1"
tokio-util = "0.7"
atty = "0.2"
indexmap = { version = "2", features = ["serde"] }

[build-dependencies]
winresource = "0.1"

[dev-dependencies]
tempfile = "3"
